--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul></ul>
     <div>
         <h2 data-bind="text: name"></h2>
+        <h3 data-bind="text: clickLevel"></h3>
         <div data-bind="text: clickCount "></div>
         <img src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: imgSrc}">
     </div>
