--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-    <ul></ul>
+    <ul data-bind="foreach: catList">
+        <li data-bind="text: name">
+        </li>
+    </ul>
     <div data-bind="with: currentCat">
         <h2 data-bind="text: name"></h2>
         <h3 data-bind="text: clickLevel"></h3>
